--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 <html>
 <head>
     <title>Scrabble Score Calculator</title>
-    <style>
-        body {
-            background-image: url("tryscrabble2.png");
-            background-size: cover;
-        }
-        #result {
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <h1>Scrabble Score Calculator</h1>
@@ -42,25 +33,90 @@
         // Points assigned to each letter of the alphabet
         const POINTS = [1, 3, 3, 2, 1, 4, 2, 4, 1, 8, 5, 1, 3, 1, 1, 3, 10, 1, 1, 1, 1, 4, 4, 8, 4, 10];
 
-        function computeScore(word) {
-            // Your computeScore() function implementation
+        function computeScore(word, dictionary) {
+            if (!/^[a-zA-Z]+$/.test(word)) {
+                return {
+                    score: 0,
+                    valid: false,
+                    message: "Invalid word. Only alphabetic characters are allowed."
+                };
+            }
+
+            const lowerCaseWord = word.toLowerCase();
+            if (!dictionary.has(lowerCaseWord)) {
+                return {
+                    score: 0,
+                    valid: false,
+                    message: `The word '${word}' is not a valid word.`
+                };
+            }
+
+            const score = Array.from(lowerCaseWord).reduce((total, char) => {
+                const charCode = char.charCodeAt(0);
+                const index = charCode - 97;
+                return total + POINTS[index];
+            }, 0);
+
+            return {
+                score: score,
+                valid: true,
+                message: `The word '${word}' is valid.`
+            };
         }
 
-        function isWordValid(word, dictionary) {
-            // Your isWordValid() function implementation
-        }
-
-        function getDictionary(callback) {
-            // Your getDictionary() function implementation
+        function getDictionary() {
+            return new Promise(function(resolve, reject) {
+                const xhr = new XMLHttpRequest();
+                xhr.open('GET', 'dictionary.txt', true);
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState === 4) {
+                        if (xhr.status === 200) {
+                            const words = xhr.responseText.split('\n');
+                            const dictionary = new Set(words);
+                            resolve(dictionary);
+                        } else {
+                            reject(new Error(`Failed to load dictionary. Status code: ${xhr.status}`));
+                        }
+                    }
+                };
+                xhr.send();
+            });
         }
 
         function showResult(event) {
             event.preventDefault();
-            // Rest of your showResult() function implementation
+
+            const word1 = document.getElementById("word1").value;
+            const word2 = document.getElementById("word2").value;
+
+            getDictionary()
+                .then(function(dictionary) {
+                    const score1Result = computeScore(word1, dictionary);
+                    const score2Result = computeScore(word2, dictionary);
+
+                    document.getElementById("word1Result").textContent = word1;
+                    document.getElementById("score1Result").textContent = score1Result.score;
+                    document.getElementById("valid1Result").textContent = score1Result.valid;
+                    document.getElementById("message1Result").textContent = score1Result.message;
+
+                    document.getElementById("word2Result").textContent = word2;
+                    document.getElementById("score2Result").textContent = score2Result.score;
+                    document.getElementById("valid2Result").textContent = score2Result.valid;
+                    document.getElementById("message2Result").textContent = score2Result.message;
+
+                    document.getElementById("scrabbleForm").style.display = "none";
+                    document.getElementById("result").style.display = "block";
+                })
+                .catch(function(error) {
+                    console.error(error);
+                });
         }
 
         function resetForm() {
-            // Your resetForm() function implementation
+            document.getElementById("scrabbleForm").reset();
+            document.getElementById("scrabbleForm").style.display = "block";
+            document.getElementById("result").style.display = "none";
+            return false; // Prevent default link behavior
         }
 
         document.getElementById("scrabbleForm").addEventListener("submit", showResult);
