--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
     <title>Scrabble Score Calculator</title>
+    <style>
+         body {
+            background-image: url("scrabble.png");
+            background-size: cover;
+        }
+        #result {
+            display: none;
+    </style>
 </head>
 <body>
     <h1>Scrabble Score Calculator</h1>
