--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <title>Scrabble Score Calculator</title>
     <style>
          body {
-            background-image: url("scrabble.png");
+            background-image: url("tryscrabble2.png");
             background-size: cover;
         }
-        #result {
-            display: none;
     </style>
 </head>
 <body>
