--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
             background-image: url("tryscrabble2.png");
             background-size: cover;
         }
+        #result {
+            display: none;
+        }
     </style>
 </head>
 <body>
