--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
             background-image: url("tryscrabble2.png");
             background-size: cover;
         }
+        body {
+            background-image: url("path/to/your/image.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
         #result {
             display: none;
-        }
+            background-color: #ffffff;
+            padding: 20px;
+            text-align: center;
+
     </style>
 </head>
 <body>
