--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
             background-image: url("tryscrabble2.png");
             background-size: cover;
             display: flex;
-           
-            align-items: center;
+            justify-content: center;
+            
             height: 100vh;
             margin: 0;
             padding: 0;
