--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <title>Scrabble Score Calculator</title>
     <style>
+        body {
+            background-image: url("tryscrabble2.png");
+            background-size: cover;
+            display: flex;
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+
         #result {
             display: none;
             background-color: #ffffff;
@@ -99,12 +108,6 @@ p {
     margin-top: 10px;
     font-weight: bold;
 }
-
-body {
-    background-image: url("tryscrabble2.png");
-    background-size: cover;
-  }
-
     </style>
 </head>
 <body>
