--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Scrabble Score Calculator</title>
     <style>
         body {
-            background-image: url("path/to/your/image.jpg");
+            background-image: url("tryscrabble2.png");
             background-size: cover;
             background-repeat: no-repeat;
             display: flex;
